	- Include a climb rate at half the take-off climb rate while evading below min altitude.
	- Prevent inverted loops when below min altitude and improve the inverted loop threshold calculation.
	- Improve vessel collision avoidance by prioritising non-debris and by prioritising potential collisions by size.
- Armor:
	- Allow changing the unclamped min/max dimensions for proc armor in the settings.cfg (PROC_ARMOR_ALT_LIMITS).
- Weapons:
	- Fix APS point defenses not respecting Infinite Ammo cheat.
	- Fix APS weapons not activating when Guardmode enabled, if they aren't already active.
	- Anti-Missile weapons can now shoot down missiles in Paintball mode.
	- Missiles:
		- Add option (in Show Missile and Countermeasure Settings) to allow missiles to be fired from their full dynamic launch range instead of static launch range. 
		- Fix missiles with a reload module launching incorrectly.
		- Add trigger range setting for cluster missile submunition launch.
		- Fix MultiMissilelaunchers resetting detonation Distance.
		- Fix MML "TNT Mass Equivalent = -0.0018726" PAW label.
		- Fixed Missiles with ModuleMissileRearm improperly launching.
		- Fixed MMLs resetting detonation distance.
		- Multi Missile launchers now check clearance based on tube orientation regardless of overrideReferenceTransform setting.
		- Missile/bomb fratricide prevention now also checks the source vessel name to allow explosives to be destroyed by explosives of the same type from another vessel.
		- Fix NRE from SARH missiles fired without a lock.
		- Missiles now properly calculate offboresight angle from missile orientation, not vessel prograde.
- Competition:
	- Adjust round progress strings in tournaments: ranked => 0→N, shuffled => 1→N.
	- Report total number of rounds for ranked tournaments properly.

v1.6.4.1
IMPROVEMENTS / FIXES
- UI:
	- Add an option for disabling the self-updating of the text in numeric input fields.