@@ -680,6 +680,7 @@ Localization
         #LOC_BDArmory_TurnRadiusTwiddleFactorMax = Terrain Avoidance Tuning Max
         #LOC_BDArmory_TerrainAvoidanceCriticalAngle = Inverted Terrain Avoidance Critical Angle
         #LOC_BDArmory_TerrainAvoidanceVesselReactionTime = Vessel Reaction Time
+        #LOC_BDArmory_TerrainAvoidancePostAvoidanceCoolDown = Post-Avoidance Cool-Down
         #LOC_BDArmory_WaypointTerrainAvoidance = Waypoint Terrain Avoidance
         
         #LOC_BDArmory_PilotAI_Ramming = Ramming
